--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,3 @@
-alembic==1.4.2
-blinker==1.4
-click==7.1
-cycler==0.10.0
-decorator==4.4.2
-dominate==2.5.1
-Flask==1.1.1
-Flask-Bootstrap==3.3.7.1
-Flask-Mail==0.9.1
-Flask-Migrate==2.5.3
-Flask-Moment==0.9.0
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
-imageio==2.8.0
-itsdangerous==1.1.0
-Jinja2==2.11.1
-kiwisolver==1.1.0
-Mako==1.1.2
-MarkupSafe==1.1.1
-matplotlib==3.2.0
-networkx==2.4
-numpy==1.18.1
-Pillow==7.0.0
-pyparsing==2.4.6
-python-dateutil==2.8.1
-python-editor==1.0.4
-PyWavelets==1.1.1
-scikit-image==0.16.2
-scipy==1.4.1
-six==1.14.0
-SQLAlchemy==1.3.15
-visitor==0.1.3
-Werkzeug==1.0.0
-WTForms==2.2.1
+# this requirements file is used by Heroku
+# requirements for other configurations are located in the requirements subdirectory
+-r requirements/heroku.txt
